# WildPositionMonitor

./: .env.example  .gitignore  README.md  http.txt  pyproject.toml  run_app.sh  run_wb_wave.cmd  run_wb_wave.sh  socks5.txt  structure.txt  uv.lock.conflicted
downloaded_files/proxy_ext_dir/: background.js  manifest.json
scripts/: check_wb_token.py  poc_wb_antibot_threshold.py  poc_wb_internal_detail.py
src/: __init__.py  config.py  data_models.py  log_cleanup.py  logger.py  main.py  test.ipynb  wb_cookie_manager.py  wb_products_data.json  wb_token_provider.py
src/db/: __init__.py  base_client.py  clickhouse_client.py  postgres_client.py
src/services/: __init__.py  wb_service.py
src/utils/: __init__.py  excel_reader.py  google_sheets_reader.py
src_new/: config.py  test.ipynb  wb_price_parser.py  wb_products_data.json
src_new/core/: database.py
